# FrittesRancagua-

./: .gitignore  BACKEND-CONTRACT.md  CHECKLIST-4.md  PENDIENTES-EXTERNOS.md  RESULTADOS-CHECKLIST-3.2.md  RESULTADOS-CHECKLIST-3.3-3.4.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_pending_otps.py  0003_restaurant_config.py  0004_reward_tiers.py  0005_card_levels.py  0006_proximity.py  0007_menu.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/loyalty/: __init__.py  admin_router.py  exceptions.py  google_wallet.py  menu_router.py  router.py  service.py  wallet_stamps.py
backend/scripts/: seed.py
frontends/frittes-loyalty/: .env.example  README.md  global.d.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontends/frittes-loyalty/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontends/frittes-loyalty/components/: add-to-wallet.tsx  auth-flow.tsx  celebration-overlay.tsx  frittes-mark.tsx  install-prompt.tsx  menu-client.tsx  onboarding.tsx  pwa-register.tsx  skeleton-pass.tsx  toast.tsx  wallet-pass.tsx
frontends/frittes-loyalty/lib/: analytics.ts  api.ts  branding.ts  types.ts  use-auth.ts  use-loyalty-account.ts  use-online-status.ts  (+1 more)
frontends/frittes-pos/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+30 files in other folders)
