[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frittes-loyalty-backend"
version = "0.1.0"
description = "FastAPI backend for Frittes Maison loyalty"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.1,<5",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic"]

[tool.uv]
package = false

[tool.setuptools]
packages = ["app", "app.loyalty", "scripts"]
